--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -470,7 +470,7 @@
             that provide the association between the material and its numeric label can be found in the SOLO_Score_Builder/pages_material/ folder.
             <br>
             <br>
-            The number next to each section represents the percentage of coherence with the comparison instructions provided by the Formschema. This number can be changed to adjust the selection of material to one's liking.
+            The number next to each section represents the percentage of coherence with the comparison instructions provided by the Formschema. This number can be changed to adjust the selection of material to one's liking. To trigger the process, you need to press the START button.
           </p>
         </div>
       </div>
