--- a/pages/learn/karlheinz_stockhausen_solo.html
+++ b/pages/learn/karlheinz_stockhausen_solo.html
@@ -100,7 +100,7 @@
           <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
             <br>
             <br>
-            <strong>INDICE</strong>
+            <strong>INDEX</strong>
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
