--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -470,7 +470,8 @@
             that provide the association between the material and its numeric label can be found in the SOLO_Score_Builder/pages_material/ folder.
             <br>
             <br>
-            The number next to each section represents the percentage of coherence with the comparison instructions provided by the Formschema. This number can be changed to adjust the selection of material to one's liking. To trigger the process, you need to press the START button.
+            The number next to each section represents the percentage of coherence with the comparison instructions provided by the Formschema. This number can be changed to adjust the selection of material to one's liking. To trigger the process,
+            you need to press the START button.
           </p>
         </div>
       </div>
@@ -492,7 +493,18 @@
     </div>
   </section>
 
-
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-10">
+          <p class="mbr-text mbr-fonts-style display-7">
+            Now that you've had a hint on how the patch works, you can follow the <a href="https://www.gabrielavelitch.com/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_tutorial.html" target="_blank"><b>SOLO - Score Builder Tutorial</b></a> that will help you write your own version of Solo.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Footer-->
   <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
