--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_tutorial.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_tutorial.html
@@ -109,12 +109,12 @@
             This tutorial follows after reading the <a href="https://www.gabrielavelitch.com/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html" target="_blank"><b>SOLO - Score Builder Manual</b></a>.
             <br>
           <ol>
-            <li>Download the <a href="https://www.gabrielavelitch.com/downloads/tools/maxmsp/Stockhausen_SOLO_patch/SOLO_Score_Builder.zip" target="_blank"><b>Solo Score Builder MaxMSP patch</b></a></li>
-            <li>Unzip</li>
-            <li>Open the MAIN.maxpat, the process may take several minutes</li>
-            <li>Select the Formschema Version you want to use using the dropdown menu</li>
+            <li>Download the <a href="https://www.gabrielavelitch.com/downloads/tools/maxmsp/Stockhausen_SOLO_patch/SOLO_Score_Builder.zip" target="_blank"><b>Solo Score Builder MaxMSP patch</b></a>.</li>
+            <li>Unzip.</li>
+            <li>Open the MAIN.maxpat, the process may take several minutes.</li>
+            <li>Select the Formschema Version you want to use using the dropdown menu.</li>
             <li>Click the PAGES ORDER button to randomize the pages sequence. This will also trigger the selected cycle in the Formschema Instructions section.</li>
-            <li></li>
+            <li>Adjust the percentage numbers in the "MAterial Chooser" section</li>
             <li></li>
 
           </ol>
