--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_tutorial.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_tutorial.html
@@ -114,9 +114,9 @@
             <li>Open the MAIN.maxpat, the process may take several minutes.</li>
             <li>Select the Formschema Version you want to use using the dropdown menu.</li>
             <li>Click the PAGES ORDER button to randomize the pages sequence. This will also trigger the selected cycle in the Formschema Instructions section.</li>
-            <li>Adjust the percentage numbers in the "MAterial Chooser" section</li>
+            <li>Be sure that the cycle A is selected in the Formschema Instructions.</li>
+            <li>Adjust the percentage numbers in the "Material Chooser" section and click START to refresh.</li>
             <li></li>
-
           </ol>
           </p>
         </div>
