--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_tutorial.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_tutorial.html
@@ -116,7 +116,7 @@
             <li>Click the PAGES ORDER button to randomize the pages sequence. This will also trigger the selected cycle in the Formschema Instructions section.</li>
             <li>Be sure that the cycle A is selected in the Formschema Instructions.</li>
             <li>Adjust the percentage numbers in the "Material Chooser" section and click START to refresh.</li>
-            <li></li>
+            <li>Write the score corresponding to the cycle A following the "Formschema Instructions" and the related material given from the "Material Chooser" section.</li>
           </ol>
           </p>
         </div>
