--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_tutorial.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_tutorial.html
@@ -117,6 +117,7 @@
             <li>Be sure that the cycle A is selected in the Formschema Instructions.</li>
             <li>Adjust the percentage numbers in the "Material Chooser" section and click START to refresh.</li>
             <li>Write the score corresponding to the cycle A following the "Formschema Instructions" and the related material given from the "Material Chooser" section.</li>
+            <li>Repeat the process for each cycle. Select the cycle by clicking the corresponding label in the "Formschema Instructions" section.</li>
           </ol>
           </p>
         </div>
