--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_tutorial.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_tutorial.html
@@ -106,7 +106,8 @@
             <strong>INTRODUCTION</strong>
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
-            This tutorial follows after reading the <a href="https://www.gabrielavelitch.com/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html" target="_blank"><b>SOLO - Score Builder Manual</b></a>.
+            This tutorial follows after reading the <a href="https://www.gabrielavelitch.com/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html" target="_blank"><b>SOLO - Score Builder Manual</b></a>. Before starting, it is
+            essential to have read the instructions provided by Stockhausen in the introduction of the original score.
             <br>
           <ol>
             <li>Download the <a href="https://www.gabrielavelitch.com/downloads/tools/maxmsp/Stockhausen_SOLO_patch/SOLO_Score_Builder.zip" target="_blank"><b>Solo Score Builder MaxMSP patch</b></a>.</li>
