--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -142,7 +142,7 @@
         <div class="col-12 col-lg-6">
           <div class="item mbr-flex">
             <div class="icon-box">
-              <span class="mbr-iconfont mobi-mbri-globe-2 mobi-mbri"></span>
+              <i class="material-icons">cloud</i>
             </div>
             <div class="text-box">
               <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>When</strong></h4>
