--- a/assets/internals/gkv_nav.html
+++ b/assets/internals/gkv_nav.html
@@ -26,6 +26,8 @@
                   <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/learn.html">LEARN</a>
                   </li>
                 </ul>
+                <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/about.html">ABOUT ME</a>
+                </li>
             </div>
         </div>
     </nav>
