--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -142,7 +142,7 @@
         <div class="col-12 col-lg-6">
           <div class="item mbr-flex">
             <div class="icon-box">
-              <i class="material-icons">event</i>
+              <i class="material-icons" style="color:white;">event</i>
             </div>
             <div class="text-box">
               <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>When</strong></h4>
@@ -154,7 +154,7 @@
           </div>
           <div class="item mbr-flex">
             <div class="icon-box">
-              <i class="material-icons">gesture</i>
+              <i class="material-icons" style="color:white;">gesture</i>
             </div>
             <div class="text-box">
               <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>What</strong></h4>
@@ -165,7 +165,7 @@
           </div>
           <div class="item mbr-flex">
             <div class="icon-box">
-              <i class="material-icons">location_on</i>
+              <i class="material-icons" style="color:white;">location_on</i>
             </div>
             <div class="text-box">
               <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>Where</strong></h4>
