--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -534,16 +534,16 @@
               <div class="carousel slide carousel-fade" id="lb-tz4TcXjy8v" data-interval="5000" data-bs-interval="5000">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="assets/images/features1.jpg" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_8.jpg" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/images/features2.jpg" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_0.jpg" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/images/cranes.webp" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_1.jpg" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/images/cranes.webp" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_2.jpg" alt="">
                   </div>
                   <div class="carousel-item">
                     <img class="d-block w-100" src="assets/images/cranes.webp" alt="">
@@ -601,10 +601,10 @@
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
-                <strong>John Smith</strong>
+                <strong>Michelangelo Lupone</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
-                <strong>Programmer</strong>
+                <strong>Artistic Director, Composer</strong>
               </h6>
               <p class="card-text mbr-fonts-style align-center display-7">
                 No special actions required, all sites you make with Mobirise are mobile-friendly.
@@ -637,10 +637,10 @@
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
-                <strong>Sarah Palmer</strong>
+                <strong>Laura Bianchini</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
-                <strong>Manager</strong>
+                <strong>Artistic Director, Composer</strong>
               </h6>
               <p class="card-text mbr-fonts-style align-center display-7">
                 Use Mobirise website building software to create multiple sites for your clients.
@@ -673,10 +673,10 @@
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
-                <strong>Jessica Swift</strong>
+                <strong>Giulio Colangelo</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
-                <strong>Analyst</strong>
+                <strong>Composer</strong>
               </h6>
               <p class="card-text mbr-fonts-style align-center display-7">
                 Create multiple pages. Don't forget to set links to your pages after creating them.
@@ -708,10 +708,10 @@
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
-                <strong>Helen Smith</strong>
+                <strong>Silvia Lanzalone</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
-                <strong>Designer</strong>
+                <strong>Composer</strong>
               </h6>
               <p class="card-text mbr-fonts-style align-center display-7">
                 Each theme in the Mobirise site builder contains a set of unique blocks.
