--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -457,7 +457,7 @@
       <div class="row mbr-gallery mt-4">
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="assets/images/features1.jpg" alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_8.jpg" alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -465,7 +465,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="assets/images/features2.jpg" alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_0.jpg" alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -473,7 +473,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="assets/images/cranes.webp" alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_1.jpg" alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -482,7 +482,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="assets/images/cranes.webp" alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_2.jpg" alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
