--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -178,92 +178,35 @@
   </section>
 
 
-  <section data-bs-version="5.1" class="slider1 cid-tz4q9na41x mbr-fullscreen" id="slider1-6">
-    <div class="carousel slide carousel-fade" id="tz4TcVC5jq" data-interval="5000" data-bs-interval="5000">
-      <ol class="carousel-indicators">
-        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tz4TcVC5jq" data-bs-target="#tz4TcVC5jq"></li>
-        <li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#tz4TcVC5jq" data-bs-target="#tz4TcVC5jq"></li>
-        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tz4TcVC5jq" data-bs-target="#tz4TcVC5jq"></li>
-        <li data-slide-to="3" data-bs-slide-to="3" data-target="#tz4TcVC5jq" data-bs-target="#tz4TcVC5jq"></li>
-        <li data-slide-to="4" data-bs-slide-to="4" data-target="#tz4TcVC5jq" data-bs-target="#tz4TcVC5jq"></li>
-        <li data-slide-to="5" data-bs-slide-to="5" data-target="#tz4TcVC5jq" data-bs-target="#tz4TcVC5jq"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item slider-image item active">
-          <div class="item-wrapper">
-            <img class="d-block w-100" src="assets/images/background3.jpg" data-slide-to="0" data-bs-slide-to="0">
-            <div class="carousel-caption">
-              <h5 class="mbr-section-subtitle mbr-fonts-style display-5">
-                <strong>Full-Width Slider</strong>
-              </h5>
-              <p class="mbr-section-text mbr-fonts-style display-7">Click on the image to edit slides.</p>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item slider-image item">
-          <div class="item-wrapper">
-            <img class="d-block w-100" src="assets/images/img-2-1600x901.jpg" data-slide-to="1" data-bs-slide-to="1">
-            <div class="carousel-caption">
-              <h5 class="mbr-section-subtitle mbr-fonts-style display-5">
-                <strong>Full-Width Slider</strong>
-              </h5>
-              <p class="mbr-section-text mbr-fonts-style display-7">Click on the image to edit slides.</p>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item slider-image item">
-          <div class="item-wrapper">
-            <img class="d-block w-100" src="assets/images/background5.jpg" data-slide-to="2" data-bs-slide-to="2">
-            <div class="carousel-caption">
-              <h5 class="mbr-section-subtitle mbr-fonts-style display-5">
-                <strong>Full-Width Slider</strong>
-              </h5>
-              <p class="mbr-section-text mbr-fonts-style display-7">Click on the image to edit slides.</p>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item slider-image item">
-          <div class="item-wrapper">
-            <img class="d-block w-100" src="assets/images/cranes.webp" data-slide-to="3" data-bs-slide-to="3">
-            <div class="carousel-caption">
-              <h5 class="mbr-section-subtitle mbr-fonts-style display-5">
-                <strong>Full-Width Slider</strong>
-              </h5>
-              <p class="mbr-section-text mbr-fonts-style display-7">Click on the image to edit slides.</p>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item slider-image item">
-          <div class="item-wrapper">
-            <img class="d-block w-100" src="assets/images/background8.jpg" data-slide-to="4" data-bs-slide-to="4">
-            <div class="carousel-caption">
-              <h5 class="mbr-section-subtitle mbr-fonts-style display-5">
-                <strong>Full-Width Slider</strong>
-              </h5>
-              <p class="mbr-section-text mbr-fonts-style display-7">Click on the image to edit slides.</p>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item slider-image item">
-          <div class="item-wrapper">
-            <img class="d-block w-100" src="assets/images/cranes.webp" data-slide-to="5" data-bs-slide-to="5">
-            <div class="carousel-caption">
-              <h5 class="mbr-section-subtitle mbr-fonts-style display-5">
-                <strong>Full-Width Slider</strong>
-              </h5>
-              <p class="mbr-section-text mbr-fonts-style display-7">Click on the image to edit slides.</p>
+  <section data-bs-version="5.1" class="header17 cid-tz5ehtSdxc mbr-fullscreen" id="header17-d">
+    <div class="align-center container">
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <h1 class="mbr-section-title mb-3 mbr-fonts-style display-1">
+            <strong>Echi d'Acqua</strong>
+          </h1>
+          <div class="mbr-media mb-3 show-modal" data-modal=".modalWindow">
+            <div class="icon-wrapper">
+              <span class="mbr-iconfont mobi-mbri-play mobi-mbri"></span>
             </div>
           </div>
         </div>
       </div>
-      <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tz4TcVC5jq">
-        <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
-        <span class="sr-only visually-hidden">Previous</span>
-      </a>
-      <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tz4TcVC5jq">
-        <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
-        <span class="sr-only visually-hidden">Next</span>
-      </a>
+    </div>
+    <div>
+      <div class="modalWindow" style="display: none;">
+        <div class="modalWindow-container">
+          <div class="modalWindow-video-container">
+            <div class="modalWindow-video">
+              <iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="https://www.youtube.com/watch?v=36YgDDJ7XSc"></iframe>
+            </div>
+            <a class="close" role="button" data-dismiss="modal" data-bs-dismiss="modal">
+              <span aria-hidden="true" class="mbr-iconfont mobi-mbri-close mobi-mbri closeModal"></span>
+              <span class="sr-only visually-hidden">Close</span>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
