--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -683,6 +683,154 @@
     </div>
   </section>
 
+  <section data-bs-version="5.1" class="team1 cid-tz58SzB9U5" id="team1-b">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-sm-6 col-lg-3">
+          <div class="card-wrap">
+            <div class="image-wrap">
+              <img src="assets/images/team1.jpg">
+            </div>
+            <div class="content-wrap">
+              <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
+                <strong>Alessio Gabriele</strong>
+              </h5>
+              <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
+                <strong>Composer</strong>
+              </h6>
+              <p class="card-text mbr-fonts-style align-center display-7">
+                No special actions required, all sites you make with Mobirise are mobile-friendly.
+              </p>
+              <div class="social-row display-7">
+                <div class="soc-item">
+                  <a href="https://www.facebook.com/Mobirise/" target="_blank">
+                    <span class="mbr-iconfont socicon socicon-facebook"></span>
+                  </a>
+                </div>
+                <div class="soc-item">
+                  <a href="https://twitter.com/mobirise" target="_blank">
+                    <span class="mbr-iconfont socicon socicon-twitter"></span>
+                  </a>
+                </div>
+                <div class="soc-item">
+                  <a href="https://instagram.com/mobirise" target="_blank">
+                    <span class="mbr-iconfont socicon socicon-instagram"></span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-3">
+          <div class="card-wrap">
+            <div class="image-wrap">
+              <img src="assets/images/team2.jpg">
+            </div>
+            <div class="content-wrap">
+              <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
+                <strong>Emanuela Mentuccia</strong>
+              </h5>
+              <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
+                <strong>Plastic and Luminous Environments Designer</strong>
+              </h6>
+              <p class="card-text mbr-fonts-style align-center display-7">
+                Use Mobirise website building software to create multiple sites for your clients.
+              </p>
+              <div class="social-row display-7">
+                <div class="soc-item">
+                  <a href="https://www.facebook.com/Mobirise/" target="_blank">
+                    <span class="mbr-iconfont socicon socicon-facebook"></span>
+                  </a>
+                </div>
+                <div class="soc-item">
+                  <a href="https://twitter.com/mobirise" target="_blank">
+                    <span class="mbr-iconfont socicon socicon-twitter"></span>
+                  </a>
+                </div>
+                <div class="soc-item">
+                  <a href="https://instagram.com/mobirise" target="_blank">
+                    <span class="mbr-iconfont socicon socicon-instagram"></span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-lg-3">
+          <div class="card-wrap">
+            <div class="image-wrap">
+              <img src="assets/images/team3.jpg">
+            </div>
+            <div class="content-wrap">
+              <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
+                <strong>Gabriela Velitch</strong>
+              </h5>
+              <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
+                <strong>Sound and Production Technician</strong>
+              </h6>
+              <p class="card-text mbr-fonts-style align-center display-7">
+                Create multiple pages. Don't forget to set links to your pages after creating them.
+              </p>
+              <div class="social-row display-7">
+                <div class="soc-item">
+                  <a href="https://www.facebook.com/Mobirise/" target="_blank">
+                    <span class="mbr-iconfont socicon socicon-facebook"></span>
+                  </a>
+                </div>
+                <div class="soc-item">
+                  <a href="https://twitter.com/mobirise" target="_blank">
+                    <span class="mbr-iconfont socicon socicon-twitter"></span>
+                  </a>
+                </div>
+                <div class="soc-item">
+                  <a href="https://instagram.com/mobirise" target="_blank">
+                    <span class="mbr-iconfont socicon socicon-instagram"></span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-lg-3">
+          <div class="card-wrap">
+            <div class="image-wrap">
+              <img src="assets/images/team4.jpg">
+            </div>
+            <div class="content-wrap">
+              <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
+                <strong>Helen Smith</strong>
+              </h5>
+              <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
+                <strong>Designer</strong>
+              </h6>
+              <p class="card-text mbr-fonts-style align-center display-7">
+                Each theme in the Mobirise site builder contains a set of unique blocks.
+              </p>
+              <div class="social-row display-7">
+                <div class="soc-item">
+                  <a href="https://www.facebook.com/Mobirise/" target="_blank">
+                    <span class="mbr-iconfont socicon socicon-facebook"></span>
+                  </a>
+                </div>
+                <div class="soc-item">
+                  <a href="https://twitter.com/mobirise" target="_blank">
+                    <span class="mbr-iconfont socicon socicon-twitter"></span>
+                  </a>
+                </div>
+                <div class="soc-item">
+                  <a href="https://instagram.com/mobirise" target="_blank">
+                    <span class="mbr-iconfont socicon socicon-instagram"></span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Footer-->
   <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
