--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -126,7 +126,7 @@
   <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
 
 
-  <section data-bs-version="5.1" class="features12 cid-tz4yHC152R" id="features13-9">
+  <section data-bs-version="5.1" class="features12 cid-tz4yHC152R" data-bg-video="https://www.gabrielavelitch.com/img/echi_dacqua/video_1.mov" id="features13-9">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 col-lg-6">
@@ -680,7 +680,7 @@
     </div>
   </section>
 
-  <section data-bs-version="5.1" class="team1 cid-tz58SzB9U5" id="team1-b">
+  <section data-bs-version="5.1" class="team1 cid-tz4qRZ0YJ3" id="team1-b">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-sm-6 col-lg-3">
