--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -392,12 +392,12 @@
   <section data-bs-version="5.1" class="gallery6 mbr-gallery cid-tz4m3xhlGq" id="gallery6-4">
     <div class="container-fluid">
       <div class="mbr-section-head">
-        <h3 class="mbr-section-title mbr-fonts-style align-center m-0 display-2"><strong>Full-Width Gallery with Popup Slider</strong></h3>
+        <h3 class="mbr-section-title mbr-fonts-style align-center m-0 display-2"><strong>Gallery</strong></h3>
       </div>
       <div class="row mbr-gallery mt-4">
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_8.jpg" alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/1.png" alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -405,7 +405,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_0.jpg" alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/2.png" alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -413,16 +413,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_1.jpg" alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
-            <div class="icon-wrapper">
-              <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
-            </div>
-          </div>
-
-        </div>
-        <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-          <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_2.jpg" alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/3.png" alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -431,7 +422,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="assets/images/cranes.webp" alt="" data-slide-to="4" data-bs-slide-to="4" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/4.png" alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -440,7 +431,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="assets/images/features3.jpg" alt="" data-slide-to="5" data-bs-slide-to="5" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/5.png" alt="" data-slide-to="4" data-bs-slide-to="4" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -449,7 +440,7 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="assets/images/features4.jpg" alt="" data-slide-to="6" data-bs-slide-to="6" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/6.png" alt="" data-slide-to="5" data-bs-slide-to="5" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -458,7 +449,16 @@
         </div>
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
           <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
-            <img class="w-100" src="assets/images/cranes.webp" alt="" data-slide-to="7" data-bs-slide-to="7" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/7.png" alt="" data-slide-to="6" data-bs-slide-to="6" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
+            <div class="icon-wrapper">
+              <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-12 col-md-6 col-lg-3 item gallery-image">
+          <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tz4TcXjy8v-modal" data-bs-target="#tz4TcXjy8v-modal">
+            <img class="w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/8.png" alt="" data-slide-to="7" data-bs-slide-to="7" data-target="#lb-tz4TcXjy8v" data-bs-target="#lb-tz4TcXjy8v">
             <div class="icon-wrapper">
               <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
             </div>
@@ -474,28 +474,28 @@
               <div class="carousel slide carousel-fade" id="lb-tz4TcXjy8v" data-interval="5000" data-bs-interval="5000">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_8.jpg" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/1.png" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_0.jpg" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/2.png" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_1.jpg" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/3.png" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/img_2.jpg" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/4.png" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/images/cranes.webp" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/5.png" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/images/features3.jpg" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/6.png" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/images/features4.jpg" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/7.png" alt="">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="assets/images/cranes.webp" alt="">
+                    <img class="d-block w-100" src="https://www.gabrielavelitch.com/img/echi_dacqua/8.png" alt="">
                   </div>
                 </div>
                 <ol class="carousel-indicators">
