--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -127,6 +127,10 @@
 
 
   <section data-bs-version="5.1" class="features12 cid-tz4yHC152R" data-bg-video="https://www.gabrielavelitch.com/img/echi_dacqua/video_1.mov" id="features13-9">
+    <video width="100%" height="100%" autoplay muted>
+  <source src="https://www.gabrielavelitch.com/img/echi_dacqua/video_1.mov" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 col-lg-6">
