--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -151,8 +151,8 @@
             <div class="text-box">
               <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>When</strong></h4>
               <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-                <div><span style="font-size: 1.1rem;">14 December 2019 – 20 January 2020</span></div>
-                <div><span style="font-size: 1.1rem;">Every day from 10.00 AM to 07.00 PM</span><br></div>
+                14 December 2019 – 20 January 2020<br>
+                Every day from 10.00 AM to 07.00 PM
               </h5>
             </div>
           </div>
@@ -163,7 +163,7 @@
             <div class="text-box">
               <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>What</strong></h4>
               <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-                <div><span style="font-size: 1.1rem;">A sensory journey made up of musical installations by five composers that enhance the acoustic properties of the Palombaro lungo.</span><br></div>
+                A sensory journey made up of musical installations by five composers that enhance the acoustic properties of the Palombaro lungo.
               </h5>
             </div>
           </div>
