--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -173,7 +173,7 @@
             </div>
             <div class="text-box">
               <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>Where</strong></h4>
-              <h5 class="icon-text mbr-black mbr-fonts-style display-4">Palombaro Lungo, Matera. A huge water cistern carved into the rocks below Piazza Vittorio Veneto. It is deep 15 meters and can contain 5 million cubic meters of water.</h5>
+              <h5 class="icon-text mbr-black mbr-fonts-style display-4">Palombaro Lungo, Matera: a huge water cistern carved into the rocks below Piazza Vittorio Veneto. It is deep 15 meters and can contain 5 million cubic meters of water.</h5>
             </div>
           </div>
         </div>
