--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -725,7 +725,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="card-wrap">
             <div class="image-wrap">
-              <img src="assets/images/team2.jpg">
+              <img src="https://www.gabrielavelitch.com/img/people/emanuela_mentuccia.webp">
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
@@ -752,8 +752,8 @@
                   <a href="https://instagram.com/mobirise" target="_blank">
                     <span class="mbr-iconfont socicon socicon-instagram"></span>
                   </a>
-                </div>
               </div>
+            </div>
             </div>
           </div>
         </div>
@@ -761,7 +761,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="card-wrap">
             <div class="image-wrap">
-              <img src="assets/images/team3.jpg">
+              <img src="https://www.gabrielavelitch.com/img/people/gabriela_velitch.webp">
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
@@ -770,9 +770,6 @@
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Sound and Production Technician</strong>
               </h6>
-              <p class="card-text mbr-fonts-style align-center display-7">
-                Create multiple pages. Don't forget to set links to your pages after creating them.
-              </p>
               <div class="social-row display-7">
                 <div class="soc-item">
                   <a href="https://www.facebook.com/Mobirise/" target="_blank">
