--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -541,7 +541,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="card-wrap">
             <div class="image-wrap">
-              <img src="assets/images/team1.jpg">
+              <img src="https://www.gabrielavelitch.com/img/people/michelangelo_lupone.webp">
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
@@ -550,9 +550,6 @@
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Artistic Director, Composer</strong>
               </h6>
-              <p class="card-text mbr-fonts-style align-center display-7">
-                No special actions required, all sites you make with Mobirise are mobile-friendly.
-              </p>
               <div class="social-row display-7">
                 <div class="soc-item">
                   <a href="https://www.facebook.com/Mobirise/" target="_blank">
@@ -577,7 +574,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="card-wrap">
             <div class="image-wrap">
-              <img src="assets/images/team2.jpg">
+              <img src="https://www.gabrielavelitch.com/img/people/laura_bianchini.webp">
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
@@ -586,9 +583,6 @@
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Artistic Director, Composer</strong>
               </h6>
-              <p class="card-text mbr-fonts-style align-center display-7">
-                Use Mobirise website building software to create multiple sites for your clients.
-              </p>
               <div class="social-row display-7">
                 <div class="soc-item">
                   <a href="https://www.facebook.com/Mobirise/" target="_blank">
@@ -613,7 +607,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="card-wrap">
             <div class="image-wrap">
-              <img src="assets/images/team3.jpg" alt="">
+              <img src="https://www.gabrielavelitch.com/img/people/giulio_colangelo.webp" alt="">
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
@@ -622,9 +616,6 @@
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Composer</strong>
               </h6>
-              <p class="card-text mbr-fonts-style align-center display-7">
-                Create multiple pages. Don't forget to set links to your pages after creating them.
-              </p>
               <div class="social-row display-7">
                 <div class="soc-item">
                   <a href="https://www.facebook.com/Mobirise/" target="_blank">
@@ -648,7 +639,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="card-wrap">
             <div class="image-wrap">
-              <img src="assets/images/team4.jpg">
+              <img src="https://www.gabrielavelitch.com/img/people/silvia_lanzalone.webp">
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
@@ -657,9 +648,6 @@
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Composer</strong>
               </h6>
-              <p class="card-text mbr-fonts-style align-center display-7">
-                Each theme in the Mobirise site builder contains a set of unique blocks.
-              </p>
               <div class="social-row display-7">
                 <div class="soc-item">
                   <a href="https://www.facebook.com/Mobirise/" target="_blank">
@@ -689,8 +677,7 @@
       <div class="row justify-content-center">
         <div class="col-sm-6 col-lg-3">
           <div class="card-wrap">
-            <div class="image-wrap">
-              <img src="assets/images/team1.jpg">
+            <div class="image-wrap">https://www.gabrielavelitch.com/img/people/alessio_gabriele.webp">
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
@@ -699,9 +686,6 @@
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Composer</strong>
               </h6>
-              <p class="card-text mbr-fonts-style align-center display-7">
-                No special actions required, all sites you make with Mobirise are mobile-friendly.
-              </p>
               <div class="social-row display-7">
                 <div class="soc-item">
                   <a href="https://www.facebook.com/Mobirise/" target="_blank">
@@ -734,9 +718,6 @@
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Plastic and Luminous Environments Designer</strong>
               </h6>
-              <p class="card-text mbr-fonts-style align-center display-7">
-                Use Mobirise website building software to create multiple sites for your clients.
-              </p>
               <div class="social-row display-7">
                 <div class="soc-item">
                   <a href="https://www.facebook.com/Mobirise/" target="_blank">
