--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -545,7 +545,7 @@
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
-                <strong>Michelangelo Lupone</strong>
+                <strong>Michelangelo<br>Lupone</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Artistic Director, Composer</strong>
@@ -578,7 +578,7 @@
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
-                <strong>Laura Bianchini</strong>
+                <strong>Laura<br>Bianchini</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Artistic Director, Composer</strong>
@@ -611,7 +611,7 @@
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
-                <strong>Giulio Colangelo</strong>
+                <strong>Giulio<br>Colangelo</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Composer</strong>
@@ -643,7 +643,7 @@
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
-                <strong>Silvia Lanzalone</strong>
+                <strong>Silvia<br>Lanzalone</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Composer</strong>
@@ -681,7 +681,7 @@
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
-                <strong>Alessio Gabriele</strong>
+                <strong>Alessio<br>Gabriele</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Composer</strong>
@@ -713,7 +713,7 @@
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
-                <strong>Emanuela Mentuccia</strong>
+                <strong>Emanuela<br>Mentuccia</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Plastic and Luminous Environments Designer</strong>
@@ -746,7 +746,7 @@
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
-                <strong>Gabriela Velitch</strong>
+                <strong>Gabriela<br>Velitch</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Sound and Production Technician</strong>
