--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -648,7 +648,8 @@
       <div class="row justify-content-center">
         <div class="col-sm-6 col-lg-3">
           <div class="card-wrap">
-            <div class="image-wrap">https://www.gabrielavelitch.com/img/people/alessio_gabriele.webp">
+            <div class="image-wrap">
+              <img src="https://www.gabrielavelitch.com/img/people/alessio_gabriele.webp">
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
