--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -582,7 +582,7 @@
             </div>
             <div class="content-wrap">
               <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
-                <strong>Giulio<br>Colangelo</strong>
+                <strong>Giulio<br>Colangelo<br></strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                 <strong>Composer</strong>
@@ -617,7 +617,7 @@
                 <strong>Silvia<br>Lanzalone</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
-                <strong>Composer</strong>
+                <strong>Composer<br></strong>
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
@@ -656,7 +656,7 @@
                 <strong>Alessio<br>Gabriele</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
-                <strong>Composer</strong>
+                <strong>Composer<br></strong>
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
