--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -640,18 +640,8 @@
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
-                  <a href="https://www.facebook.com/Mobirise/" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-facebook"></span>
-                  </a>
-                </div>
-                <div class="soc-item">
-                  <a href="https://twitter.com/mobirise" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-twitter"></span>
-                  </a>
-                </div>
-                <div class="soc-item">
                   <a href="https://instagram.com/mobirise" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-instagram"></span>
+                    <span class="mbr-iconfont socicon socicon-linkedin"></span>
                   </a>
                 </div>
               </div>
@@ -672,18 +662,8 @@
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
-                  <a href="https://www.facebook.com/Mobirise/" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-facebook"></span>
-                  </a>
-                </div>
-                <div class="soc-item">
-                  <a href="https://twitter.com/mobirise" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-twitter"></span>
-                  </a>
-                </div>
-                <div class="soc-item">
                   <a href="https://instagram.com/mobirise" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-instagram"></span>
+                    <span class="mbr-iconfont socicon socicon-linkedin"></span>
                   </a>
               </div>
             </div>
@@ -705,18 +685,8 @@
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
-                  <a href="https://www.facebook.com/Mobirise/" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-facebook"></span>
-                  </a>
-                </div>
-                <div class="soc-item">
-                  <a href="https://twitter.com/mobirise" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-twitter"></span>
-                  </a>
-                </div>
-                <div class="soc-item">
                   <a href="https://instagram.com/mobirise" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-instagram"></span>
+                    <span class="mbr-iconfont socicon socicon-linkedin"></span>
                   </a>
                 </div>
               </div>
