--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -126,12 +126,8 @@
   <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
 
 
-  <section data-bs-version="5.1" class="features12 cid-tz4yHC152R" data-bg-video="https://www.gabrielavelitch.com/img/echi_dacqua/video_1.mov" id="features13-9">
+  <section data-bs-version="5.1" class="features12 cid-tz4yHC152R" id="features13-9">
     <div class="container">
-      <video width="100%" height="100%" autoplay muted>
-    <source src="https://www.gabrielavelitch.com/img/echi_dacqua/video_1.mov" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
       <div class="row justify-content-center">
         <div class="col-12 col-lg-6">
           <div class="card-wrapper">
@@ -523,18 +519,8 @@
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
-                  <a href="https://www.facebook.com/Mobirise/" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-facebook"></span>
-                  </a>
-                </div>
-                <div class="soc-item">
-                  <a href="https://twitter.com/mobirise" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-twitter"></span>
-                  </a>
-                </div>
-                <div class="soc-item">
                   <a href="https://instagram.com/mobirise" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-instagram"></span>
+                    <span class="mbr-iconfont socicon socicon-linkedin"></span>
                   </a>
                 </div>
               </div>
@@ -556,18 +542,8 @@
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
-                  <a href="https://www.facebook.com/Mobirise/" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-facebook"></span>
-                  </a>
-                </div>
-                <div class="soc-item">
-                  <a href="https://twitter.com/mobirise" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-twitter"></span>
-                  </a>
-                </div>
-                <div class="soc-item">
                   <a href="https://instagram.com/mobirise" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-instagram"></span>
+                    <span class="mbr-iconfont socicon socicon-linkedin"></span>
                   </a>
                 </div>
               </div>
