--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -363,7 +363,7 @@
   <section data-bs-version="5.1" class="gallery6 mbr-gallery cid-tz4m3xhlGq" id="gallery6-4">
     <div class="container-fluid">
       <div class="mbr-section-head">
-        <h3 class="mbr-section-title mbr-fonts-style align-center m-0 display-2"><strong>Gallery</strong></h3>
+        <h3 class="mbr-section-title mbr-fonts-style align-center m-0 display-2"><strong>Photo Gallery</strong></h3>
       </div>
       <div class="row mbr-gallery mt-4">
         <div class="col-12 col-md-6 col-lg-3 item gallery-image">
