--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -612,7 +612,7 @@
                 <strong>Alessio<br>Gabriele</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
-                <strong>Composer<br></strong>
+                <strong>Composer<br><br></strong>
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
