--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -561,7 +561,7 @@
                 <strong>Giulio<br>Colangelo<br></strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
-                <strong>Composer</strong>
+                <strong>Composer<br><br></strong>
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
@@ -583,7 +583,7 @@
                 <strong>Silvia<br>Lanzalone</strong>
               </h5>
               <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
-                <strong>Composer<br></strong>
+                <strong>Composer<br><br></strong>
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
