--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -126,7 +126,9 @@
   <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
 
 
-  <section data-bs-version="5.1" class="features12 cid-tz4yHC152R" id="features13-9">
+  <section data-bs-version="5.1" class="features12 cid-tz4yHC152R" data-bg-video="https://www.youtube.com/embed/CtM0hI45W4g" id="features13-9">
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 col-lg-6">
@@ -641,8 +643,8 @@
                   <a href="https://instagram.com/mobirise" target="_blank">
                     <span class="mbr-iconfont socicon socicon-linkedin"></span>
                   </a>
+                </div>
               </div>
-            </div>
             </div>
           </div>
         </div>
