--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -567,8 +567,8 @@
               </h6>
               <div class="social-row display-7">
                 <div class="soc-item">
-                  <a href="https://instagram.com/mobirise" target="_blank">
-                    <span class="mbr-iconfont socicon socicon-linkedin"></span>
+                  <a href="https://www.instagram.com/giulio_colangelo/" target="_blank">
+                    <span class="mbr-iconfont socicon socicon-instagram"></span>
                   </a>
                 </div>
               </div>
