--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -201,7 +201,7 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="assets/images/img-2-1128x1504.jpeg" alt="Mobirise" title="">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/1.webp" alt="" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
@@ -224,13 +224,13 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="assets/images/img-2-1128x635.jpg" alt="Mobirise" title="">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/img_0.jpg" alt="" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
             <div class="timeline-text-wrapper">
               <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Mobirise Kit</strong>
+                <strong>Project Scheme</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
                 This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. All sites you create with the Mobirise web builder are mobile-friendly natively. No special actions required.
