--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -230,7 +230,7 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="assets/images/features3.jpg" alt="Mobirise" title="">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/schema_generale.webp" alt="Mobirise" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
