--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
 
 
-  <title>Aboum Me</title>
+  <title>About Me</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -83,8 +83,8 @@
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
-              <p class="mbr-timeline-date display-7">
-                23 April 2025</p>
+              <p style="text-align: center" class="mbr-timeline-date display-7">
+                November 2016</p>
             </div>
           </div>
           <span class="iconBackground"></span>
