--- a/pages/about.html
+++ b/pages/about.html
@@ -96,7 +96,7 @@
           <div class="col-12 col-md-6">
             <div class="timeline-text-wrapper">
               <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Santa Cecilia - Electroacustic Composition</strong>
+                <strong>Santa Cecilia - BA in Electroacustic Composition</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
                 This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. You don't have to code to create your own site. Select one of available themes in the Mobirise sitebuilder.
