--- a/pages/about.html
+++ b/pages/about.html
@@ -96,10 +96,11 @@
           <div class="col-12 col-md-6">
             <div class="timeline-text-wrapper">
               <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Conservatorio Santa Cecilia - BA in Electroacustic Composition</strong>
+                <strong>Conservatorio Santa Cecilia - Beginning of BA in Electroacustic Composition</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                Surrounded by the a 21
+                This is where I come from. Sorrounded by 23 loudspeakers, the Aula Bianchini has hosted most of the lessons I attended at the Conservatoire.
+
               </p>
             </div>
           </div>
@@ -108,22 +109,24 @@
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
               <p p style="text-align: center" class="mbr-timeline-date display-7">
-                23 April 2025</p>
+                October 2018</p>
             </div>
           </div>
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="assets/images/features2.jpg" alt="Mobirise" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/sala_accademica_1.jpg" alt="Sala Accademica Santa Cecilia Roma" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
             <div class="timeline-text-wrapper">
               <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Mobirise Kit</strong>
+                <strong>Concervatorio Santa Cecilia - AV Technician</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. All sites you create with the Mobirise web builder are mobile-friendly natively. No special actions required.
+                In October 2018 I was nominated Sound and Visual Technician at the Conservatoire Santa Cecilia, a role that has evolved to the position of Senior and has been my profession until May 2022. In the last three years I have been the main AV
+                technician working in the building, so I had all the responsibilities within the sound department. Here I had the opportunity to work with talented artists. These sessions required a deep understanding of acoustics, microphone
+                placement, and mixing techniques, and I was able to bring my technical knowledge and artistic vision to the table to help the artists achieve their desired sound.
               </p>
             </div>
           </div>
