--- a/pages/about.html
+++ b/pages/about.html
@@ -152,7 +152,7 @@
                 <strong>Centro Ricerche Musicali - Sound & Production Techncician</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                CRM: a centre where artists, musicians, scientists, architects and others work together. With them I’ve worked for festivals, concerts and sound art installations; from building the equipment till the performance, I was taking care of
+                The CRM - Centro Ricerche Musicali is a centre where artists, musicians, scientists, architects and researchers work together. With them I’ve worked for festivals, concerts and sound art installations; from building the equipment till the performance, I was taking care of
                 all the sound aspects. The best aspect of this role was that they were considering me as a creative more than a technician, so I had the possibility to grow really close to artistic management.
               </p>
             </div>
