--- a/pages/about.html
+++ b/pages/about.html
@@ -179,7 +179,7 @@
                 <strong>Music Devices Design</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                I love to design music devices. Find out more.
+                I love to design music devices. Find out more about this <a href="https://www.gabrielavelitch.com/pages/projects.html" target="_blank">Double Channel DI Box</a>.
               </p>
             </div>
           </div>
