--- a/pages/about.html
+++ b/pages/about.html
@@ -109,7 +109,7 @@
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
               <p style="text-align: center" class="mbr-timeline-date display-7">
-                October 2018</p>
+                October 2018 - May 2022</p>
             </div>
           </div>
           <span class="iconBackground"></span>
